Revision history for Magic-Check

{{$NEXT}}

0.002     2023-09-02 14:21:22+02:00 Europe/Brussels
          - Add a non-fatal mode

0.001     2023-08-26 17:20:39+02:00 Europe/Amsterdam
          Initial release to an unsuspecting world